--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,11 @@
   <artifactId>Assignment2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>SoftwareEngineering_Assignment2</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>joda-time</groupId>
+  		<artifactId>joda-time</artifactId>
+  		<version>2.10.5</version>
+	</dependency>
+  </dependencies>
 </project>
