--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,10 @@
   		<artifactId>joda-time</artifactId>
   		<version>2.10.5</version>
 	</dependency>
+	<dependency>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<version>4.12</version>
+	</dependency>
   </dependencies>
 </project>
